Bug 1839509 - no need to use virtual window, because the media engine would determine where the video should be rendered. r=jolin

The reason of using this virtual window is for Output Protection
Manager (OPM). However, based on [1], "If your application uses the
protected media path (PMP) to play video content, you do not have to use
the OPM API, because the PMP makes all of the required OPM calls", we
can acutally play DRM video correctly without using the virtual window.

I tested it on SWDRM and HWDRM, they both work successfully. Therefore,
we can remove the virtual window usage completely.

[1]
https://learn.microsoft.com/en-us/windows/win32/medfound/using-output-protection-manager

Differential Revision: https://phabricator.services.mozilla.com/D182123